# ssl_ros_bridge

./: CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: CI.yml
ssl_league_msgs/: CMakeLists.txt
ssl_league_msgs/game_controller/msg/: GameEventProposalGroup.msg  Referee.msg  TeamInfo.msg
ssl_league_protobufs/proto/: ssl_simulation_robot_control.proto
ssl_ros_bridge/: CMakeLists.txt  package.xml
ssl_ros_bridge/launch/: ssl_ros_bridge.launch.xml  ssl_ros_bridge_localhost_only.launch.xml
ssl_ros_bridge/src/core/: CMakeLists.txt  get_ip_addresses.cpp  message_conversion.cpp  message_conversion.hpp  multicast_receiver.cpp  multicast_receiver.hpp
ssl_ros_bridge/src/game_controller_bridge/: CMakeLists.txt  gc_multicast_bridge_node.cpp
ssl_ros_bridge/src/log2bag/: CMakeLists.txt  log2bag.cpp  log_reader.cpp  log_reader.hpp
ssl_ros_bridge/src/team_client/: CMakeLists.txt  team_client.hpp  team_client_node.cpp
ssl_ros_bridge/src/vision_bridge/: CMakeLists.txt  ssl_vision_bridge_node.cpp
ssl_ros_bridge_msgs/: CMakeLists.txt
